--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("/src/assets/fonts/GoogleSans-Regular.woff2") format("woff2");
+  src: url("./assets/fonts/GoogleSans-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("/src/assets/fonts/GoogleSans-Bold.woff2") format("woff2");
+  src: url("./assets/fonts/GoogleSans-Bold.woff2") format("woff2");
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("/src/assets/fonts/GoogleSans-Medium.woff2") format("woff2");
+  src: url("./assets/fonts/GoogleSans-Medium.woff2") format("woff2");
 }
 
 @font-face {
@@ -27,7 +27,7 @@
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url("/src/assets/fonts/GoogleSans-MediumItalic.woff2") format("woff2");
+  src: url("./assets/fonts/GoogleSans-MediumItalic.woff2") format("woff2");
 }
 
 @font-face {
@@ -35,7 +35,7 @@
   font-style: italic;
   font-weight: 700;
   font-display: swap;
-  src: url("/src/assets/fonts/GoogleSans-BoldItalic.woff2") format("woff2");
+  src: url("./assets/fonts/GoogleSans-BoldItalic.woff2") format("woff2");
 }
 
 html,
