--- a/src/index.css
+++ b/src/index.css
@@ -269,7 +269,7 @@ button {
   font-family: "Google Sans", Arial, sans-serif;
   font-size: 50px;
   font-weight: 800;
-  min-height: 30px; /* Adjust as needed */
+  min-height: 30px;
   display: block;
   text-align: center;
   letter-spacing: -1.44px;
