--- a/src/index.css
+++ b/src/index.css
@@ -233,6 +233,7 @@ html[data-theme="dark"] .theme-switcher-btn:hover i.bi {
   font-size: 1rem;
   position: relative;
   gap: 0.8rem;
+  font-size: 16px;
 }
 
 .link-card a {
