--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ body {
 }
 
 :root {
+  font-family: "Google Sans", "Helvetica Neue", system-ui, Arial, sans-serif;
   --background-color: #ffffff;
   --text-color: #000000;
   --footer-bg: transparent;
