--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
-/* index.css (font-face section) */
 @font-face {
   font-family: "Google Sans";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("./assets/fonts/GoogleSans-Regular.woff2") format("woff2");
+  src: url("/assets/fonts/GoogleSans-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -12,7 +11,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("./assets/fonts/GoogleSans-Medium.woff2") format("woff2");
+  src: url("/assets/fonts/GoogleSans-Medium.woff2") format("woff2");
 }
 
 @font-face {
@@ -20,7 +19,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("./assets/fonts/GoogleSans-Bold.woff2") format("woff2");
+  src: url("/assets/fonts/GoogleSans-Bold.woff2") format("woff2");
 }
 
 :root {
