--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
+@font-face {
+  font-family: "Google Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("./assets/fonts/GoogleSans-Regular-Djvx7XI4.woff2") format("woff2");
+}
+@font-face {
+  font-family: "Google Sans";
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url("./assets/fonts/GoogleSans-Medium-krSl1Cbs.woff2") format("woff2");
+}
+@font-face {
+  font-family: "Google Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("./assets/fonts/GoogleSans-Bold-DdUpYAm4.woff2") format("woff2");
+}
+body,
+h1,
+p,
+a,
+span {
+  font-family: "Google Sans", sans-serif !important;
+}
+
 :root {
   --background-color: #ffffff;
   --text-color: #000000;
