--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-/* src/index.css */
 @font-face {
   font-family: "Google Sans";
   font-style: normal;
@@ -25,8 +24,8 @@
 @font-face {
   font-family: "bootstrap-icons";
   font-display: swap;
-  src: url("./assets/fonts/bootstrap-icons.woff2") format("woff2"),
-    url("./assets/fonts/bootstrap-icons.woff") format("woff");
+  src: url("src/assets/fonts/bootstrap-icons.woff2") format("woff2"),
+    url("src/assets/fonts/bootstrap-icons.woff") format("woff");
 }
 
 :root {
