--- a/src/index.css
+++ b/src/index.css
@@ -12,20 +12,14 @@
   font-display: swap;
   src: url("/src/assets/fonts/GoogleSans-Medium.woff2") format("woff2");
 }
-@font-face {
-  font-family: "Google Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url("/src/assets/fonts/GoogleSans-Bold.woff2") format("woff2");
-}
+/* Removed GoogleSans-Bold @font-face - now inlined in index.html */
 
 /* Use imported Bootstrap Icons fonts */
 @font-face {
   font-family: "bootstrap-icons";
   font-display: swap;
-  src: url("src/assets/fonts/bootstrap-icons.woff2") format("woff2"),
-    url("src/assets/fonts/bootstrap-icons.woff") format("woff");
+  src: url("/src/assets/fonts/bootstrap-icons.woff2") format("woff2"),
+    url("/src/assets/fonts/bootstrap-icons.woff") format("woff");
 }
 
 :root {
