--- a/src/index.css
+++ b/src/index.css
@@ -297,12 +297,8 @@ button {
 
 .simple-modal {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 23.75rem;
-  width: 90%;
-  background: var(--background-color);
+
+  background: none;
   border-radius: 0.75rem;
   box-shadow: 0 0.25rem 0.75rem var(--shadow-color);
   z-index: 1050;
