--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("./assets/fonts/GoogleSans-Regular.woff2") format("woff2");
+  src: url("/aitrends.now/assets/fonts/GoogleSans-Regular.woff2")
+    format("woff2");
 }
 
 @font-face {
@@ -11,14 +12,14 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("./assets/fonts/GoogleSans-Medium.woff2") format("woff2");
+  src: url("/aitrends.now/assets/fonts/GoogleSans-Medium.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "bootstrap-icons";
   font-display: swap;
-  src: url("./assets/fonts/bootstrap-icons.woff2") format("woff2"),
-    url("./assets/fonts/bootstrap-icons.woff") format("woff");
+  src: url("/aitrends.now/assets/fonts/bootstrap-icons.woff2") format("woff2"),
+    url("/aitrends.now/assets/fonts/bootstrap-icons.woff") format("woff");
 }
 
 :root {
