--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("src/assets/fonts/GoogleSans-Regular.woff2") format("woff2");
+  src: url("./assets/fonts/GoogleSans-Regular.woff2") format("woff2");
 }
 
 @font-face {
