--- a/assets/css/index-DHltlyVG.css
+++ b/assets/css/index-DHltlyVG.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("./assets/fonts/GoogleSans-Regular.woff2") format("woff2");
+  src: url("../assets/fonts/GoogleSans-Regular-BAWu7gF0.woff2") format("woff2");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("./assets/fonts/GoogleSans-Medium.woff2") format("woff2");
+  src: url("../assets/fonts/GoogleSans-Medium-BDIf4JKU.woff2") format("woff2");
 }
 
 @font-face {
