--- a/src/index.css
+++ b/src/index.css
@@ -296,8 +296,8 @@ button {
 }
 
 .simple-modal {
-  position: fixed;
-
+  position: relative;
+  padding: 2px;
   background: none;
   border-radius: 0.75rem;
   box-shadow: 0 0.25rem 0.75rem var(--shadow-color);
