--- a/assets/css/index-C0sd8vPh.css
+++ b/assets/css/index-C0sd8vPh.css
@@ -47,7 +47,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Google Sans", "Helvetica Neue", system-ui, Arial, sans-serif !important;
+  font-family: "Google Sans", system-ui, Arial, sans-serif !important;
   background-color: var(--background-color) !important;
   color: var(--text-color) !important;
   transition: background-color 0.3s ease, color 0.3s ease;
@@ -165,9 +165,9 @@ button {
 }
 
 .profile-image {
-  width: 80px; /* Match HTML width */
-  height: 80px; /* Match HTML height */
-  object-fit: cover; /* Ensure image fits without distortion */
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
   border-radius: 50%;
   border: 3px solid var(--text-color);
   object-fit: cover;
